[gd_scene load_steps=10 format=3 uid="uid://nlm0tgth7n62"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage4/eyeballs_4.gd" id="1_6ioxu"]
[ext_resource type="Texture2D" uid="uid://bdvy24x1x5my" path="res://Assets/Stages/04/Eyeball4.png" id="1_s7eiq"]
[ext_resource type="PackedScene" uid="uid://dyyfgfuvs4qcn" path="res://Scenes/Stages/Stage4/bullet_4.tscn" id="2_dap1e"]

[sub_resource type="Animation" id="Animation_07utr"]
resource_name = "GrowEyeball"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_psgdr"]
_data = {
"GrowEyeball": SubResource("Animation_07utr")
}

[sub_resource type="Animation" id="Animation_3oxpi"]
resource_name = "Spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EyeballHolder1/Eyeball1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EyeballHolder1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EyeballHolder2/Eyeball2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.25664, -7.53982]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EyeballHolder2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.25664, 7.53982]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EyeballHolder3/Eyeball3:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-2.51327, -8.79646]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EyeballHolder3:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.51327, 8.79646]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EyeballHolder4/Eyeball4:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.76991, -10.0531]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("EyeballHolder4:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.76991, 10.0531]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("EyeballHolder5/Eyeball5:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-5.02655, -11.3097]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("EyeballHolder5:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.02655, 11.3097]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nos0c"]
_data = {
"Spin": SubResource("Animation_3oxpi")
}

[sub_resource type="Animation" id="Animation_qd1ma"]
resource_name = "Shrink"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ynv4"]
_data = {
"Shrink": SubResource("Animation_qd1ma")
}

[node name="Eyeballs4" type="Node2D"]
script = ExtResource("1_6ioxu")
bullet = ExtResource("2_dap1e")

[node name="EyeballHolder1" type="Node2D" parent="."]
rotation = 3.85539

[node name="Eyeball1" type="Sprite2D" parent="EyeballHolder1"]
position = Vector2(30, 0)
rotation = -3.85539
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_s7eiq")

[node name="EyeballHolder2" type="Node2D" parent="."]
rotation = 5.11202
scale = Vector2(1e-05, 1e-05)

[node name="Eyeball2" type="Sprite2D" parent="EyeballHolder2"]
position = Vector2(30, 0)
rotation = -5.11202
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_s7eiq")

[node name="Grower" type="AnimationPlayer" parent="EyeballHolder2"]
libraries = {
"": SubResource("AnimationLibrary_psgdr")
}

[node name="EyeballHolder3" type="Node2D" parent="."]
rotation = 6.36866
scale = Vector2(1e-05, 1e-05)

[node name="Eyeball3" type="Sprite2D" parent="EyeballHolder3"]
position = Vector2(30, 0)
rotation = -6.36866
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_s7eiq")

[node name="Grower" type="AnimationPlayer" parent="EyeballHolder3"]
libraries = {
"": SubResource("AnimationLibrary_psgdr")
}

[node name="EyeballHolder4" type="Node2D" parent="."]
rotation = 7.6253
scale = Vector2(1e-05, 1e-05)

[node name="Eyeball4" type="Sprite2D" parent="EyeballHolder4"]
position = Vector2(30, 0)
rotation = -7.6253
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_s7eiq")

[node name="Grower" type="AnimationPlayer" parent="EyeballHolder4"]
libraries = {
"": SubResource("AnimationLibrary_psgdr")
}

[node name="EyeballHolder5" type="Node2D" parent="."]
rotation = 8.88193
scale = Vector2(1e-05, 1e-05)

[node name="Eyeball5" type="Sprite2D" parent="EyeballHolder5"]
position = Vector2(30, 0)
rotation = -8.88193
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_s7eiq")

[node name="Grower" type="AnimationPlayer" parent="EyeballHolder5"]
libraries = {
"": SubResource("AnimationLibrary_psgdr")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin"
libraries = {
"": SubResource("AnimationLibrary_nos0c")
}

[node name="Shrinker" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ynv4")
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
